fix to make unregistering a category work. r=rginda, sr=dveditz, b=177176 m a=robert@ocallahan.org